--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="
+      Find out about pokemon and capture them
+      ."
     />
 
     <title>Pokemon App</title>
