Fix meta description

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,7 @@
     <meta
       name="description"
       content="
-      Find out about pokemon and capture them
-      ."
+      Find out about pokemon and capture them."
     />
 
     <title>Pokemon App</title>
